# yacsi

./: CMakeLists.txt  README.md
include/yacsi/: kickoff.hpp
src/yacsi/: kickoff.cpp
src/yacsi/playground/: playground1.cpp
src/yacsi/test/: kickoff_test.cpp
